Revert "fix bugs"
This reverts commit 861df3b8507b2808dff845b329402fa224bfab23.
